# haha_terry

./: .dockerignore  .env.example  .gitignore  .terry_todos.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  PROJECT_CHECK_REPORT.md  README.md  README_zh-CN.md  README_zh-TW.md  RUNTIME_SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deploy/: CONTAINERD_GUIDE.md
deploy/containerd/: docker-compose.yml
deploy/kubernetes/: terry.yaml
docs/: index.md  installation.md  sdk.md
docs/api/: conf.py
docs/skills/: README.md  README_zh-CN.md  README_zh-TW.md
marketplace/: marketplace.json
marketplace/plugins/hello-terry/: SKILL.md  plugin.json
mobile/: BUILD_GUIDE.md
mobile/android/: twa-manifest.json
scripts/: build-binary.sh  install.sh
skills/code-review/: SKILL.md
skills/data-analysis/: SKILL.md
skills/document-generator/: SKILL.md
terry/: __init__.py  __main__.py  acp.py  cli.py  cli_commands.py  desktop.py  i18n.py  mcp_config.py  oauth.py  plugin_market.py  profile.py  sdk.py
terry/core/: __init__.py  adapter.py  agent.py  agent_hooks.py  agent_prompts.py  agent_subsystems.py  agent_swarm.py  agent_team.py  async_agent.py  async_harness.py  async_llm.py  async_subagent.py  audit.py  auto_backup.py  auto_classifier.py  auto_healer_v2.py  auto_pipeline.py  autonomous_agent.py  background_registry.py  benchmark.py  cache.py  checkpoint.py  code_index.py  commands.py  config.py  config_watcher.py  context_compact.py  context_engine.py  cost_tracker.py  curator.py  docker_sandbox.py  doctor.py  dynamic_workflow.py  editor.py  error_recovery.py  eval_runner.py  feedback.py  fts_search.py  goal_loop.py  harness.py  (+53 more)
terry/core/ai/: __init__.py
terry/core/infra/: __init__.py
terry/core/scheduling/: __init__.py
terry/core/security/: __init__.py
terry/core/storage/: __init__.py
terry/hooks/: __init__.py  logging_hook.py  permission.py
terry/locale/: en.json  zh.json
terry/lsp/: __init__.py
terry/mcp/: __init__.py
terry/server/: __init__.py  async_server.py
terry/server/gateways/: __init__.py  discord_gateway.py  telegram_gateway.py
terry/tools/: __init__.py  bash.py  calculator.py  edit_file.py  find_tool.py  glob_tool.py  grep_tool.py  harness_tool.py  ls_tool.py  notebook.py  notes.py  read_file.py  read_image.py  reminder.py  slash_command.py  task_update.py  timer.py  todo_write.py  video_input.py  weather.py  web_fetch.py  web_search.py  write_file.py
terry/tools/git/: __init__.py  git_branch.py  git_checkout.py  git_commit.py  git_diff.py  git_log.py  git_merge.py  git_status.py
terry/tools/templates/: bash.txt  edit_file.txt  glob.txt  grep.txt  read_file.txt  todo_write.txt  web_fetch.txt  web_search.txt  write_file.txt
terry/tui/: __init__.py  app.py
terry/webui/: __init__.py  server.py
terry/webui/static/: agents.html  index.html  install.html  manifest.json  offline.html  sw.js
tests/: test_80_target.py  test_async.py  test_async_server.py  test_audit_fixes.py  test_bug_hunt.py  test_comprehensive.py  test_core_detailed.py  test_core_features.py  test_core_full.py  test_core_low_coverage.py  test_cov_push.py  test_coverage.py  test_coverage_80.py  test_coverage_gap.py  test_coverage_push.py  test_coverage_v2.py  test_coverage_v3.py  test_coverage_v3b.py  test_desktop.py  test_doc_consistency.py  test_e2e.py  test_error_paths.py  test_gateways.py  test_lsp.py  test_mcp.py  test_model_fallback.py  test_new_features.py  test_new_modules.py  test_p2p3_modules.py  test_phase4_coverage.py  test_plugin_market.py  test_production_features.py  test_push_65.py  test_report_fixes.py  test_runtime_security.py  test_server_comprehensive.py  test_tools_and_security.py  test_tools_full.py  test_tui_app.py  test_v090_coverage.py  (+6 more)
vscode-extension/: package.json  tsconfig.json
vscode-extension/src/: extension.ts
