[project]
name = "terry"
version = "0.1.0"
description = "A personal AI coding agent - the harness for your LLM"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Terry Contributors"},
]
keywords = ["ai", "agent", "coding", "claude", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "anthropic>=0.105.2",
    "openai>=2.41.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.26.7",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/terry-ai/terry"
Repository = "https://github.com/terry-ai/terry"
Issues = "https://github.com/terry-ai/terry/issues"

[project.scripts]
terry = "terry.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["terry"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
