[project]
name = "terry"
version = "0.6.0"
description = "A personal AI coding agent - the harness for your LLM"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Terry Contributors"},
]
keywords = ["ai", "agent", "coding", "claude", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "anthropic>=0.105.2",
    "openai>=2.41.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.26.7",
    "pyyaml>=6.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
vector = [
    "numpy>=1.24",
    "scipy>=1.10",
]
ml = [
    "sentence-transformers>=3.0",
]

[project.urls]
Homepage = "https://github.com/terry-ai/terry"
Repository = "https://github.com/terry-ai/terry"
Issues = "https://github.com/terry-ai/terry/issues"

[project.scripts]
terry = "terry.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["terry"]

[tool.hatch.build]
only-packages = true

[tool.hatch.build.force-include]
"skills" = "terry/skills"
"terry/locale" = "terry/locale"
"terry/webui/static" = "terry/webui/static"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint.per-file-ignores]
"terry/tools/notebook.py" = ["E501"]
"terry/tools/notes.py" = ["E501"]
"terry/tools/reminder.py" = ["E501"]
"terry/core/error_recovery.py" = ["E501"]
"terry/core/repomap.py" = ["E501"]
"terry/core/spec_exec.py" = ["E501"]
"terry/core/swe_bench.py" = ["E501"]
"terry/core/security/__init__.py" = ["F401"]
"terry/core/ai/__init__.py" = ["F401"]
"terry/core/infra/__init__.py" = ["F401"]
"terry/core/scheduling/__init__.py" = ["F401"]
"terry/core/storage/__init__.py" = ["F401"]

[tool.hatch.build.targets.sdist]
include = [
    "terry/**/*.py",
    "terry/**/*.json",
    "terry/**/*.html",
    "terry/**/*.js",
    "terry/**/*.txt",
    "skills/**/*.md",
    "README.md",
    "LICENSE",
]
